--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-	<title>ganged network</title>
+	<title>jiked network</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<style>
 		body {
@@ -53,8 +52,8 @@
 <pre>J I K E D . N E T W O R K
 
 high iq hosting at cheap prices!
-we are very scary!
-i drink seething penguin tears
+we are very scary! (i ddos hibiki because i want espi to mommy dom me)
+we took hibiki down for 1 (one) minute
 
 contact us: <a href="https://www.youtube.com/watch?v=V_jHc_n0p9c">noreply@jikt.im</a>
 enquire on discord: <a href="https://www.youtube.com/watch?v=KvuQNNVrbtM" target="_blank">discord.gg/jikedreallycool</a>
