--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	</div>
 <pre>J I K E D . N E T W O R K
 
-high iq hosting at cheap prices!
+high iq intelect hosting at cheap prices!
 we are very scary! (i ddos hibiki because i want espi to mommy dom me)
 we took hibiki down for 1 (one) minute
 
